...
    <string name="dialog_android_version_message">Android 10+ is not installed in your phone. In this case, you have to connect a device if you want to track your sleep.</string>
    <string name="dialog_set_up_wearable">Set up now</string>
    <string name="dialog_remind_later">Set up later</string>
    <string name="dialog_dismiss">Do not set up</string>
    <string name="snack_report">Recording stopped. Check the results at the Reports page.</string>
    <string name="snack_no_report">You have not given permission to the app to generate the report.</string>
    <string name="ok">OK</string>
    <string name="incompatible_version">Incompatible version</string>
    <string name="microphone_icon_desc">Microphone icon</string>
    <string name="menu_home">Home</string>
    <string name="menu_summaries">Summaries</string>
    <string name="nav_header_desc">Navigation Menu Image</string>
    <string name="drawer_item_home">Analysis</string>
...
    <string name="dialog_functionality_not_available_title">Not available</string>
    <string name="channel_name">Recording notifications</string>
    <string name="channel_description">Notifications displayed when the app is recording.</string>
    <string name="notification_title">Recording active</string>
    <string name="notification_content">Soundless is recording and detecting potential noises.</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="active_recording_text">Recording right now. →</string>
    <string name="no_active_recording_text">No recordings are currently underway. →</string>
    <string name="exposure_title">Filter by noise level</string>

    <string name="innocuous">Innocuous</string>
    <string name="tolerable">Tolerable</string>
    <string name="dangerous">Dangerous</string>
    <string name="harmful">Harmful</string>

    <string name="all">All</string>
    <string name="switch_tutorial_active">Activate tutorial on startup?</string>
    <string name="summary_message">Average dB: %1$.2f dB\nMax dB: %2$.2f dB\nMain classification: %3$s</string>
    <string name="summary_title">%1$s</string>
    <string name="save_and_stop">Save and stop</string>
    <string name="cancel_without_saving">Cancel without saving</string>
    <string name="anonymous_user">Anonymous user</string>
    <string name="anonymous_description">No profile info available.</string>
...
    <string name="info_title">Recording information</string>
    <string name="info_end_date">End date</string>
    <string name="info_start_date">Start date</string>
    <string name="info_heart_rate_avg">Heart rate average</string>
    <string name="info_heart_rate_peak">Peak heart rate</string>
    <string name="info_sleep_changes">Sleep changes</string>
    <string name="delete_recordings_btn">Delete recordings</string>
    <string name="delete_recordings_question">Delete recordings?</string>
    <string name="delete_recordings_message">Are you sure you want to completely remove the data you have recorded?\n</string>
    <string name="delete_recording_question">Delete recording?</string>
    <string name="delete_recording_message">Are you sure you want to completely remove this data you have recorded?\n</string>
    <string name="delete_recordings_confirm">Delete</string>
    <string name="delete_recordings_successful">Recordings deleted.</string>
    <string name="delete_recording_successful">Recording deleted.</string>
    <string name="delete_all_data_cancel">Cancel</string>
    <string name="switch_research">Participate in research study?</string>
    <string name="key_participate_in_study" translatable="false">participateInStudy</string>
    <string name="key_skipped_tutorial" translatable="false">skippedTutorial</string>
    <string name="key_num_times_popup_shown" translatable="false">numTimesPopupShown</string>
    <string name="key_pop_up_days_left_counter" translatable="false">popupDaysLeftCounter</string>
    <string name="key_pop_up_date" translatable="false">popUpDate</string>

    <string name="fitbit_button_connect">Link with Fitbit</string>
    <string name="fitbit_button_code">Insert Fitbit code</string>
    <string name="switch_research_description">Disable only if you don\'t want dB or health metrics to be sent to the researchers. Remember: all data is anonymous.</string>
    <string name="update_fitbit_ask">A Fitbit account has been configured already. Do you want to replace or update it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="tutorial">How does Soundless work?</string>
...
