<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/switch_graphs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_tutorial_active"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/switch_tutorial_active"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_pop_up_telegram"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/switch_pop_up_telegram"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/btn_delete_recordings"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#FF0000"
        android:text="@string/delete_recordings_btn"
        android:textColor="@color/secondary_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/btn_fitbit_code"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/fitbit_button_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/btn_fitbit_connect"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/fitbit_button_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

</androidx.constraintlayout.widget.ConstraintLayout>