...
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="cat.urv.cloudlab.soundless.view.fragment.AboutFragment"
        android:label="fragment_about" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="cat.urv.cloudlab.soundless.view.fragment.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" >
        <argument
            android:name="fitbitAuthCode"
            app:argType="string"
...
